# authentx

./: .gitattributes  .gitignore  LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
authentx/: __init__.py  __main__.py
authentx/algorithm/: __init__.py  analyser.py  google_checker.py  scraper.py
authentx/cli/: __init__.py
authentx/utils/: __init__.py  ascii.py  extractor.py
