[tool.poetry]
name = "authentx"
version = "0.1.0"
description = "Plagarism Checker"
authors = ["Khushiyant <khushiyant2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
