[tool.poetry]
name = "authentx"
version = "0.1.0"
description = "A CLI based Plagiarism detection application"
authors = ["Khushiyant <khushiyant2002@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiohttp = "^3.9.5"
bs4 = "^0.0.2"
click = "^8.1.7"
duckduckgo-search = "^5.3.0"
numpy = "^1.26.4"
scipy = "1.10.1"
pdfplumber = "^0.11.0"
ruff = "^0.4.1"
scikit-learn = "^1.4.2"
sphinx = "^7.3.7"
spacy = "^3.7.4"
nltk = "^3.8.1"
gensim = "^4.3.2"
pypdf2 = "^3.0.1"
reportlab = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
